@@ -4,7 +4,7 @@
 2.0.2 vs. 2.0.1
 
   3 Enhancements
-  6 Bugfixes
+  7 Bugfixes
 ----------------------------------------------------------------------
 2.0.1 update 1
 
@@ -42,6 +42,9 @@ which has now three states:
 
   - Pattern after in Text files segmentation rule contained "\s+" instead
 of " +"
+
+  - The SkipMeta option in the HTML and XHTML filters was not initialised to 
+the default value
 
 ----------------------------------------------------------------------
  OmegaT 2.0.1
